--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
       background-color: red;
     }
 
-    
-
+    a {
+      text-decoration: none;
+      color: red;
+      font-weight: 900;
+    }
+    h1 {
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Add Book</h1>
+    <h1>Book List</h1>
+    <h2>Add Book</h2>
     <form id="book-form">
       <div>
         <label for="title">Title</label>
@@ -48,6 +55,7 @@
       </div>
     </form>
 
+    <h2>List of Books</h2>
     <table class="u-full-width">
       <thead>
         <tr>
